{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 372,
  "lineage": "6e6d0ec9-613a-53f4-e849-46fc42ef399d",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ff39345bd62c82a5",
            "arn": "arn:aws:ec2:us-east-2:673652611504:instance/i-0a95f53475324118a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a95f53475324118a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "Ohio",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bd9b97832a22493d",
            "private_dns": "ip-10-0-0-5.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.5",
            "public_ip": "3.15.211.254",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0faabf24c7e3b9c9a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07f0dde2e7feb7be2",
            "tags": {
              "Name": "es_bastion"
            },
            "tags_all": {
              "Name": "es_bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06b178abef73f48f3"
            ]
          },
          "dependencies": [
            "module.subnet.aws_subnet.subnet_public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ff39345bd62c82a5",
            "arn": "arn:aws:ec2:us-east-2:673652611504:instance/i-03653e8039afd066a",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03653e8039afd066a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "Ohio",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0acd4d5b047e0a02a",
            "private_dns": "ip-10-0-1-9.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.9",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c2d159cef0868e34",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e0e135f4344271c3",
            "tags": {
              "Name": "es-private1"
            },
            "tags_all": {
              "Name": "es-private1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0593313444490a778",
              "sg-06b178abef73f48f3"
            ]
          },
          "dependencies": [
            "module.subnet.aws_subnet.subnet_private",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ff39345bd62c82a5",
            "arn": "arn:aws:ec2:us-east-2:673652611504:instance/i-0ae4e09180ac717c5",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ae4e09180ac717c5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "Ohio",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05d8750b07c0d3749",
            "private_dns": "ip-10-0-2-9.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.9",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00b055e7bac532052",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02037c2b8949a8ba9",
            "tags": {
              "Name": "es-private2"
            },
            "tags_all": {
              "Name": "es-private2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-034aafb0b8f0cfa6f",
              "sg-06b178abef73f48f3"
            ]
          },
          "dependencies": [
            "module.subnet.aws_subnet.subnet_private",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ff39345bd62c82a5",
            "arn": "arn:aws:ec2:us-east-2:673652611504:instance/i-0256132f6d6143297",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0256132f6d6143297",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "Ohio",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-057c95861580209cf",
            "private_dns": "ip-10-0-3-14.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.14",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00817c92413e98c06",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01a558754c3955c71",
            "tags": {
              "Name": "es-private3"
            },
            "tags_all": {
              "Name": "es-private3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06b178abef73f48f3",
              "sg-0e56369d793eb2c6c"
            ]
          },
          "dependencies": [
            "module.subnet.aws_subnet.subnet_private",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.igw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:673652611504:internet-gateway/igw-093dba2309a4f2b28",
            "id": "igw-093dba2309a4f2b28",
            "owner_id": "673652611504",
            "tags": {
              "Name": "es-igw"
            },
            "tags_all": {
              "Name": "es-igw"
            },
            "vpc_id": "vpc-0ed2787dd2261a8b4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nacl",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:673652611504:network-acl/acl-0640bf5ae39e6e174",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 200,
                "to_port": 0
              }
            ],
            "id": "acl-0640bf5ae39e6e174",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 200,
                "to_port": 0
              }
            ],
            "owner_id": "673652611504",
            "subnet_ids": [
              "subnet-01a558754c3955c71",
              "subnet-02037c2b8949a8ba9",
              "subnet-0e0e135f4344271c3"
            ],
            "tags": {
              "Name": "ES-nacl"
            },
            "tags_all": {
              "Name": "ES-nacl"
            },
            "vpc_id": "vpc-0ed2787dd2261a8b4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nacl",
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-06187adff98f3cc10",
            "network_acl_id": "acl-0640bf5ae39e6e174",
            "subnet_id": "subnet-0e0e135f4344271c3"
          },
          "dependencies": [
            "module.nacl.aws_network_acl.nacl",
            "module.subnet.aws_subnet.subnet_private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-09e3bc50b0dd16204",
            "network_acl_id": "acl-0640bf5ae39e6e174",
            "subnet_id": "subnet-02037c2b8949a8ba9"
          },
          "dependencies": [
            "module.nacl.aws_network_acl.nacl",
            "module.subnet.aws_subnet.subnet_private",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0001cfc979d224061",
            "network_acl_id": "acl-0640bf5ae39e6e174",
            "subnet_id": "subnet-01a558754c3955c71"
          },
          "dependencies": [
            "module.nacl.aws_network_acl.nacl",
            "module.subnet.aws_subnet.subnet_private"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-090d98e0b0afbbda2",
            "association_id": "eipassoc-0ea286147ac16dead",
            "domain": "vpc",
            "id": "eipalloc-090d98e0b0afbbda2",
            "network_border_group": "us-east-2",
            "network_interface": "eni-08dc41ebae9bb1eb0",
            "private_dns": "ip-10-0-0-8.us-east-2.compute.internal",
            "private_ip": "10.0.0.8",
            "public_dns": "ec2-18-218-242-96.us-east-2.compute.amazonaws.com",
            "public_ip": "18.218.242.96",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "es-eip"
            },
            "tags_all": {
              "Name": "es-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-090d98e0b0afbbda2",
            "connectivity_type": "public",
            "id": "nat-071a8d0d0f13c9e6a",
            "network_interface_id": "eni-08dc41ebae9bb1eb0",
            "private_ip": "10.0.0.8",
            "public_ip": "18.218.242.96",
            "subnet_id": "subnet-07f0dde2e7feb7be2",
            "tags": {
              "Name": "es-nat"
            },
            "tags_all": {
              "Name": "es-nat"
            }
          },
          "dependencies": [
            "module.nat.aws_eip.eip",
            "module.subnet.aws_subnet.subnet_public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:673652611504:route-table/rtb-094dc6f9846ba6b89",
            "id": "rtb-094dc6f9846ba6b89",
            "owner_id": "673652611504",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-071a8d0d0f13c9e6a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "es-route_table_private"
            },
            "tags_all": {
              "Name": "es-route_table_private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed2787dd2261a8b4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat.aws_nat_gateway.nat",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:673652611504:route-table/rtb-0af813976264cd841",
            "id": "rtb-0af813976264cd841",
            "owner_id": "673652611504",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-093dba2309a4f2b28",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "es-route_table_public"
            },
            "tags_all": {
              "Name": "es-route_table_public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed2787dd2261a8b4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.igw.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019465038d80f41f1",
            "route_table_id": "rtb-094dc6f9846ba6b89",
            "subnet_id": "subnet-0e0e135f4344271c3"
          },
          "dependencies": [
            "module.nat.aws_eip.eip",
            "module.nat.aws_nat_gateway.nat",
            "module.route_table.aws_route_table.private_route_table",
            "module.subnet.aws_subnet.subnet_private",
            "module.subnet.aws_subnet.subnet_public",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-035655b31aaa35208",
            "route_table_id": "rtb-094dc6f9846ba6b89",
            "subnet_id": "subnet-02037c2b8949a8ba9"
          },
          "dependencies": [
            "module.nat.aws_eip.eip",
            "module.nat.aws_nat_gateway.nat",
            "module.route_table.aws_route_table.private_route_table",
            "module.subnet.aws_subnet.subnet_private",
            "module.subnet.aws_subnet.subnet_public",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0afb7d3e3b269a192",
            "route_table_id": "rtb-094dc6f9846ba6b89",
            "subnet_id": "subnet-01a558754c3955c71"
          },
          "dependencies": [
            "module.nat.aws_eip.eip",
            "module.nat.aws_nat_gateway.nat",
            "module.route_table.aws_route_table.private_route_table",
            "module.subnet.aws_subnet.subnet_private",
            "module.subnet.aws_subnet.subnet_public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f23c8e0602a03a8",
            "route_table_id": "rtb-0af813976264cd841",
            "subnet_id": "subnet-07f0dde2e7feb7be2"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.igw",
            "module.route_table.aws_route_table.public_route_table",
            "module.subnet.aws_subnet.subnet_public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:673652611504:security-group/sg-0593313444490a778",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0593313444490a778",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/28",
                  "10.0.2.0/28",
                  "10.0.3.0/28"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/28",
                  "10.0.2.0/28",
                  "10.0.3.0/28"
                ],
                "description": "",
                "from_port": 9200,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9200
              }
            ],
            "name": "terraform-20230118002054704700000002",
            "name_prefix": "terraform-",
            "owner_id": "673652611504",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "es-master"
            },
            "tags_all": {
              "Name": "es-master"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed2787dd2261a8b4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:673652611504:security-group/sg-034aafb0b8f0cfa6f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-034aafb0b8f0cfa6f",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/28",
                  "10.0.2.0/28",
                  "10.0.3.0/28"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/28",
                  "10.0.2.0/28",
                  "10.0.3.0/28"
                ],
                "description": "",
                "from_port": 9200,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9200
              }
            ],
            "name": "terraform-20230118002054538800000001",
            "name_prefix": "terraform-",
            "owner_id": "673652611504",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "es-data1"
            },
            "tags_all": {
              "Name": "es-data1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed2787dd2261a8b4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:673652611504:security-group/sg-0e56369d793eb2c6c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e56369d793eb2c6c",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/28",
                  "10.0.2.0/28",
                  "10.0.3.0/28"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/28",
                  "10.0.2.0/28",
                  "10.0.3.0/28"
                ],
                "description": "",
                "from_port": 9200,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9200
              }
            ],
            "name": "terraform-20230118002054714200000003",
            "name_prefix": "terraform-",
            "owner_id": "673652611504",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "es-data2"
            },
            "tags_all": {
              "Name": "es-data2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed2787dd2261a8b4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:673652611504:subnet/subnet-0e0e135f4344271c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e0e135f4344271c3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "673652611504",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "es_subnet-1"
            },
            "tags_all": {
              "Name": "es_subnet-1"
            },
            "vpc_id": "vpc-0ed2787dd2261a8b4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:673652611504:subnet/subnet-02037c2b8949a8ba9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02037c2b8949a8ba9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "673652611504",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "es_subnet-2"
            },
            "tags_all": {
              "Name": "es_subnet-2"
            },
            "vpc_id": "vpc-0ed2787dd2261a8b4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:673652611504:subnet/subnet-01a558754c3955c71",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.3.0/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a558754c3955c71",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "673652611504",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "es_subnet-3"
            },
            "tags_all": {
              "Name": "es_subnet-3"
            },
            "vpc_id": "vpc-0ed2787dd2261a8b4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:673652611504:subnet/subnet-07f0dde2e7feb7be2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07f0dde2e7feb7be2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "673652611504",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "es_subnet"
            },
            "tags_all": {
              "Name": "es_subnet"
            },
            "vpc_id": "vpc-0ed2787dd2261a8b4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:673652611504:vpc/vpc-0ed2787dd2261a8b4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e03f6c6b31c57456",
            "default_route_table_id": "rtb-07d20ec6045d6c05a",
            "default_security_group_id": "sg-06b178abef73f48f3",
            "dhcp_options_id": "dopt-024d043ad1bb6e7ff",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ed2787dd2261a8b4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07d20ec6045d6c05a",
            "owner_id": "673652611504",
            "tags": {
              "Name": "es"
            },
            "tags_all": {
              "Name": "es"
            }
          }
        }
      ]
    }
  ]
}